--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -289,7 +289,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Explora nuestra colección de los mejores videojuegos"
+                    android:text="Explora nuestra colección de los mejores juegos"
                     android:textColor="@color/text_secondary"
                     android:textSize="18sp"
                     android:lineSpacingMultiplier="1.4"
