--- a/android/app/src/main/res/layout/item_recent_game.xml
+++ b/android/app/src/main/res/layout/item_recent_game.xml
@@ -47,11 +47,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Game Title"
-                android:textColor="@color/text_primary"
+                android:textColor="#4A4A4A"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:maxLines="1"
-                android:ellipsize="end" />
+                android:ellipsize="end"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/recentGameTime"
