--- a/android/app/src/main/res/layout/activity_benefits.xml
+++ b/android/app/src/main/res/layout/activity_benefits.xml
@@ -44,6 +44,7 @@
 
         <!-- Membership Details Section -->
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/membershipDetailsCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
